[package]
authors = ["Ethan Zhang <bluefurbear@gmail.com>"]
edition = "2018"
name = "hwt905-485-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
crc16 = "0.4"
serialport = { version = "3.3", default-features = false }

[dev-dependencies]
pico-args = "0.3"
